--- a/bc-project/bc-service/pom.xml
+++ b/bc-project/bc-service/pom.xml
@@ -45,5 +45,19 @@
             <artifactId>spring-cloud-netflix-core</artifactId>
             <version>1.3.1.RELEASE</version>
         </dependency>
+        
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        
+             
+                <dependency>
+  <groupId>org.apache.httpcomponents</groupId>
+  <artifactId>httpclient</artifactId>
+  <version>4.5.5</version>
+</dependency>
     </dependencies>
 </project>
