--- a/bc-project/bc-web/src/main/resources/application-test.properties
+++ b/bc-project/bc-web/src/main/resources/application-test.properties
@@ -1,9 +1,9 @@
 server.port= 8071
 
 # mysql以及druid数据源配置
-spring.datasource.url= jdbc:mysql://172.172.172.249:3306/saasdb?characterEncoding=utf8&useSSL=true
-spring.datasource.username= saas
-spring.datasource.password= Ikangsaas0410
+spring.datasource.url= jdbc:mysql://47.100.4.27:3306/demo1?characterEncoding=utf8&useSSL=true
+spring.datasource.username= root
+spring.datasource.password= 123456
 spring.datasource.initialSize= 1
 spring.datasource.minIdle= 3
 spring.datasource.maxActive= 20
@@ -50,7 +50,7 @@ spring.datasource.connectionProperties= druid.stat.mergeSql=true;druid.stat.slow
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=192.168.98.75
+spring.redis.host=47.100.4.27
 #spring.redis.host=172.172.172.80
 # Redis服务器连接端口
 spring.redis.port=6379
@@ -67,8 +67,8 @@ spring.redis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=3000
 
-spring.application.name=base
-eureka.client.serviceUrl.defaultZone= http://172.172.172.27:9992/eureka/
+spring.application.name=pk10
+eureka.client.serviceUrl.defaultZone= http://47.100.4.27:9001/eureka
 instance.prefer-ip-address= true
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds= 5000
 
